<resources>
    <string name="app_name">NoDeterministas</string>
    <string name="title_usuario">Usuario</string>
    <string name="title_contraseña">Contraseña</string>
    <string name="seguro_datos">Segur@ de los datos ingresados</string>
    <string name="olvide_mi_contraseña"><u>Olvide mi contraseña </u></string>
    <string name="button_registrarse">Registrarse</string>
    <string name="button_facebook">Facebook</string>
    <string name="button_google">Google</string>
    <string name="title_activity_bienvenidos_menu">BienvenidosMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contacto">Nombre</string>
    <string name="nombre_fiesta">Nombre de la fiesta</string>
    <string name="fecha">Fecha</string>
    <string name="descripcion">Descripción</string>
    <string name="detalles_importantes">detalles importantes</string>
    <string name="aceptar">aceptar</string>
    <string name="button_bloqueo">Bloquear aplicaciones</string>
    <string name="edit_text_nombre">descripcion</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_text_name">Nombre</string>
    <string name="edit_text_mail">Mail</string>
    <string name="edit_text_password">Contraseña</string>
    <string name="edit_text_confirm_password">Confirmar Contraseña</string>
    <string name="button_iniciar_sesion">Inicar Sesion</string>
    <string name="button_resgistrar_nuevo_usuario">Registrarse</string>
    <string name="busquemos">BUSQUEMOS</string>
    <string name="quien_da_casa">Quien da casa</string>
    <string name="google_maps">Google Maps</string>
    <string name="button_cambiar">Cambiar</string>
    <string name="empezar">Empezar</string>
    <string name="minutos">Minutos</string>
    <string name="clave">Clave</string>
    <string name="confirmar_clave">Confirmar Clave</string>
    <string name="bienvenidos">BIENVENIDOS!</string>
    <string name="eventos">EVENTOS</string>
    <string name="ya_estoy_en_la_fiesta">YA ESTOY EN LA FIESTA</string>
    <string name="contactos_de_emergencia">CONTACTOS DE EMERGENCIA</string>
    <string name="orgaqniza_tu_fiesta">ORGANIZA TU FIESTA</string>
    <string name="elige_tu_idioma">Elige tu Idioma</string>
    <string name="español">Español</string>
    <string name="ingles">Ingles</string>
    <string name="nombre_aplicacion_ejemplo">Facebook</string>
    <string name="enviar_datos_btn">Enviar Datos</string>
    <string name="otras_aplicaciones">Otras Aplicaciones</string>
    <string name="tipo_de_bebidas">Tipo de Bebidas</string>
    <string name="tipo_de_musica">Tipo de música</string>
    <string name="titulo">Título</string>
    <string name="confirmar_cambios">Confirmar Cambios</string>

    <string name="La_Paz_full_snippet">
La República Argentina, conocida simplemente como Argentina,
es un país soberano de América del Sur, ubicado en el extremo sur y sudeste
de dicho subcontinente. Adopta la forma de gobierno republicana, representativa y federal.
El Estado nacional convive federativamente con veinticuatro entidades
estatales autónomas, de las cuales veintitrés son provincias
que preservan todo el poder no delegado constitucionalmente
a la Nación y una es la Ciudad Autónoma de Buenos Aires,
designada por ley como capital federal.
</string>
</resources>
