<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"
    tools:context=".Activities.Login">


   <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/regUserPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/avatar"
       app:civ_border_color="@color/colorAccent"/>


    <LinearLayout
        android:id="@+id/linear_layout_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/regUserPhoto"
        android:layout_marginTop="100dp">

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:ems="10"
            android:hint="@string/edit_text_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/reg_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColorHint="#BE020000"/>

        <EditText
            android:id="@+id/reg_mail"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_background"
            android:ems="10"
            android:hint="@string/edit_text_mail"
            android:inputType="textEmailAddress"
            android:textColorHint="#BE020000" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_background"
            android:ems="10"
            android:hint="@string/edit_text_password"
            android:inputType="textPassword"
            android:textColorHint="#BE020000" />

        <EditText
            android:id="@+id/reg_password2"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_background"
            android:ems="10"
            android:hint="@string/edit_text_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="#BE020000" />
    </LinearLayout>

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="86dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_background_menu"
        android:text="@string/button_registrarse"
        android:textColor="#ffffff" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="86dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
       />

</RelativeLayout>