<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/fondo_trans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/imputs_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/edit_text_mail"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_usuaario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_contraseña"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/bottom_iniciar_sesion"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:onClick="onClick"
                android:text="@string/button_iniciar_sesion"
                android:textColor="@color/white" />



            <Button
                android:id="@+id/bottom_registrate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:onClick="onClick"
                android:text="@string/button_resgistrar_nuevo_usuario"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_facebook"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:drawableRight="@drawable/facebook_logo"
                    android:paddingRight="13dp"
                    android:text="@string/button_facebook"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_google"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:drawableRight="@drawable/google_logo"
                    android:paddingRight="13dp"
                    android:text="@string/button_google"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>


















