<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BienvenidosMenu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/tool_bar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/contenedor_fragmanto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tool_bar_view"
            android:background="@drawable/fondo4">


            <TextView
                android:id="@+id/text_view_bienvenidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/knewave"
                android:textColor="#F0E9E9"
                android:text="@string/bienvenidos"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/drawable_beer"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@+id/text_view_bienvenidos"
                android:layout_centerHorizontal="true"
                android:src="@drawable/beer" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/drawable_beer"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/button_eventos"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_menu"
                    android:fontFamily="@font/knewave"
                    android:textColor="@color/white"
                    android:onClick="onClick"
                    android:text="@string/eventos" />

                <Button
                    android:id="@+id/button_ya_estoy_en_fiesta"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_menu"
                    android:fontFamily="@font/knewave"
                    android:textColor="@color/white"
                    android:onClick="onClick"
                    android:text="@string/ya_estoy_en_la_fiesta" />

                <Button
                    android:id="@+id/button_contc_de_emergencia"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_menu"
                    android:fontFamily="@font/knewave"
                    android:onClick="onClick"
                    android:text="@string/contactos_de_emergencia" />

                <Button
                    android:id="@+id/button_organiza_tu_fiesta"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_menu"
                    android:textColor="@color/white"
                    android:fontFamily="@font/knewave"
                    android:onClick="onClick"
                    android:text="@string/orgaqniza_tu_fiesta"

                    />

            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>