<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/popup_user_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="#6AE7D3"
            android:padding="8dp"
            android:src="@drawable/avatar"
            app:layout_constraintBottom_toTopOf="@+id/popup_fecha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/popup_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <EditText

            android:id="@+id/popup_title"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/popup_edittext_style"
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/popup_user_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/popup_fecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_edittext_style"
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_title" />


        <EditText
            android:id="@+id/popup_bebidas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_edittext_style"
            android:ems="10"
            android:hint="@string/tipo_de_bebidas"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_fecha" />


        <EditText
            android:id="@+id/popup_musica"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_edittext_style"
            android:ems="10"
            android:hint="@string/tipo_de_musica"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_bebidas" />

        <EditText
            android:id="@+id/popup_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_edittext_style"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_musica" />


        <ImageView
            android:id="@+id/popup_img_add"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:background="#2d2d2d"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_description"
            android:src="@drawable/agregar_foto"/>

        <ImageView

            android:id="@+id/popup_bton_add"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/circle_bg"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/popup_img_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_img_add"
            app:srcCompat="@drawable/ic_create_black_24dp" />

        <ProgressBar
            android:id="@+id/popup_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_bg"
            android:padding="4dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/popup_bton_add"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/popup_bton_add"
            app:layout_constraintTop_toTopOf="@+id/popup_bton_add"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>